pihole/service.yml
apiVersion: v1
kind: Service
metadata:
  name: pihole-tcp
  namespace: pihole
spec:
  type: ClusterIP
  selector:
    app: pihole
  ports:
  - name: http
    port: 80
    protocol: TCP
  - name: dhcp
    port: 67
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-tcp-53
  namespace: pihole
  annotations:
    metallb.universe.tf/allow-shared-ip: pihole
spec:
  externalTrafficPolicy: Local
  type: LoadBalancer
  selector:
    app: pihole
  ports:
  - port: 53
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-udp-53
  namespace: pihole
  annotations:
    metallb.universe.tf/allow-shared-ip: pihole
spec:
  externalTrafficPolicy: Local
  type: LoadBalancer
  selector:
    app: pihole
  ports:
  - port: 53
    protocol: UDP
---
