pihole/default-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole-ingress
  namespace: pihole
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: public
  rules:
  - host: pihole.lan
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: pihole-tcp
              port:
                number: 80
